--- a/index.html
+++ b/index.html
@@ -1,74 +1,334 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-<title>Void Invaders</title>
-<style>
-  body{margin:0;background:#000;color:#0f0;font-family:courier new;overflow:hidden}
-  canvas{display:block;width:100vw;height:100vh;background:#001}
-  #connect{position:absolute;top:20px;left:50%;transform:translateX(-50%);z-index:99;padding:15px 30px;font-size:18px;background:#000;border:2px solid #0f0;color:#0f0}
-  #status{position:absolute;top:70px;left:50%;transform:translateX(-50%);z-index:99}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Void Invaders: Galactic Grind</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background: #000;
+            color: #00ff00;
+            font-family: 'Courier New', monospace;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            overflow: hidden;
+        }
+        #gameContainer {
+            text-align: center;
+            border: 2px solid #00ff00;
+            padding: 20px;
+        }
+        #header {
+            margin-bottom: 10px;
+        }
+        #prices {
+            font-size: 14px;
+            margin-bottom: 10px;
+        }
+        #gameInfo {
+            margin-bottom: 10px;
+            font-size: 16px;
+        }
+        #canvas {
+            border: 1px solid #00ff00;
+            background: #111;
+        }
+        #controls {
+            margin-top: 10px;
+            font-size: 12px;
+        }
+        #mineBtn {
+            background: #00ff00;
+            color: #000;
+            border: none;
+            padding: 10px 20px;
+            font-family: inherit;
+            cursor: pointer;
+            margin: 5px;
+        }
+        #redeemBtn {
+            background: #ff00ff;
+            color: #000;
+            border: none;
+            padding: 10px 20px;
+            font-family: inherit;
+            cursor: pointer;
+            margin: 5px;
+        }
+        #modal {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: #000;
+            border: 2px solid #00ff00;
+            padding: 20px;
+            z-index: 10;
+        }
+        #overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.8);
+            z-index: 5;
+        }
+    </style>
 </head>
 <body>
+    <div id="gameContainer">
+        <div id="header">
+            <h1># Void Invaders: Galactic Grind</h1>
+            <div id="prices">$WAY4OUT: <span id="way4out">$0.0012</span> ↑2% | $COIN4: <span id="coin4">$0.0045</span> ↑15% | $TR3B: <span id="tr3b">$0.0008</span> ↓1% | Grind to Mine!</div>
+        </div>
+        <div id="gameInfo">
+            Wallet: <span id="wallet">Disconnected</span><br>
+            Score: <span id="score">0</span> | $WAY4OUT: <span id="wayScore">0</span> | $COIN4: <span id="coinScore">0</span> | $TR3B: <span id="tr3bScore">0</span> | Wave: <span id="wave">1</span>
+        </div>
+        <canvas id="canvas" width="800" height="600"></canvas>
+        <div id="controls">
+            Use ← → or A/D to move | SPACE to shoot
+        </div>
+        <button id="mineBtn">Mine Shards (AFK Grind)</button>
+        <button id="redeemBtn">Redeem for Tokens</button>
+    </div>
 
-<button id="connect">CONNECT WALLET – WORKS EVERYWHERE</button>
-<div id="status">Wallet: not connected</div>
-<canvas id="c"></canvas>
+    <div id="overlay"></div>
+    <div id="modal">
+        <h2>Redeem Shards</h2>
+        <p>Convert your shards to Base tokens!</p>
+        <div id="redeemInfo"></div>
+        <button onclick="closeModal()">Close</button>
+    </div>
 
-<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-<script src="https://unpkg.com/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
-<script>
-  const status = document.getElementById('status');
-  const btn = document.getElementById('connect');
+    <script>
+        const canvas = document.getElementById('canvas');
+        const ctx = canvas.getContext('2d');
+        const scoreEl = document.getElementById('score');
+        const wayScoreEl = document.getElementById('wayScore');
+        const coinScoreEl = document.getElementById('coinScore');
+        const tr3bScoreEl = document.getElementById('tr3bScore');
+        const waveEl = document.getElementById('wave');
 
-  async function connect() {
-    let provider;
-    if (window.ethereum) {
-      provider = window.ethereum;
-      try { await provider.request({ method: 'eth_requestAccounts' }); }
-      catch { status.textContent = 'User rejected'; return; }
-    } else {
-      provider = new WalletConnectProvider({ rpc: { 8453: "https://mainnet.base.org" } });
-      await provider.enable();
-    }
+        // Game state
+        let score = 0;
+        let wayScore = 0;
+        let coinScore = 0;
+        let tr3bScore = 0;
+        let wave = 1;
+        let gameRunning = true;
+        let mining = false;
 
-    const web3 = new Web3(provider);
-    const accounts = await web3.eth.getAccounts();
-    const acc = accounts[0];
+        // Player
+        const player = {
+            x: canvas.width / 2 - 15,
+            y: canvas.height - 50,
+            width: 30,
+            height: 20,
+            speed: 5
+        };
 
-    // force Base
-    try {
-      await provider.request({ method: 'wallet_switchEthereumChain', params: [{ chainId: '0x2105' }] });
-    } catch (e) {
-      await provider.request({ method: 'wallet_addEthereumChain', params: [{
-        chainId: '0x2105', chainName: 'Base', rpcUrls: ['https://mainnet.base.org'],
-        nativeCurrency: { name: 'ETH', symbol: 'ETH', decimals: 18 },
-        blockExplorerUrls: ['https://basescan.org']
-      }]});
-    }
+        // Enemies array
+        let enemies = [];
+        let bullets = [];
+        let enemyBullets = [];
 
-    status.textContent = `Connected: ${acc.slice(0,6)}...${acc.slice(-4)}`;
-    btn.textContent = "WALLET CONNECTED";
-    btn.disabled = true;
-  }
+        // Input handling
+        const keys = {};
+        document.addEventListener('keydown', (e) => { keys[e.key.toLowerCase()] = true; });
+        document.addEventListener('keyup', (e) => { keys[e.key.toLowerCase()] = false; });
 
-  btn.onclick = connect;
+        // Simple beep sound
+        function beep(frequency = 440, duration = 100) {
+            const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+            const oscillator = audioCtx.createOscillator();
+            const gainNode = audioCtx.createGain();
+            oscillator.connect(gainNode);
+            gainNode.connect(audioCtx.destination);
+            oscillator.frequency.value = frequency;
+            gainNode.gain.setValueAtTime(0.3, audioCtx.currentTime);
+            gainNode.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + duration / 1000);
+            oscillator.start(audioCtx.currentTime);
+            oscillator.stop(audioCtx.currentTime + duration / 1000);
+        }
 
-  // tiny demo so you see canvas works
-  const c = document.getElementById('c');
-  const ctx = c.getContext('2d');
-  function resize(){c.width=innerWidth;c.height=innerHeight;}
-  resize(); window.onresize=resize;
-  let x = c.width/2;
-  c.ontouchmove = e => x = e.touches[0].clientX;
-  function loop(){
-    ctx.fillStyle='#000'; ctx.fillRect(0,0,c.width,c.height);
-    ctx.fillStyle='#0f0'; ctx.fillRect(x-30,c.height-80,60,60);
-    requestAnimationFrame(loop);
-  }
-  loop();
-</script>
+        // Create enemy
+        function createEnemy() {
+            const enemy = {
+                x: Math.random() * (canvas.width - 40),
+                y: 0,
+                width: 40,
+                height: 30,
+                speed: 1 + wave * 0.5,
+                shootTimer: Math.random() * 2000 + 1000
+            };
+            enemies.push(enemy);
+        }
+
+        // Shoot bullet
+        function shoot(x, y, isPlayer = true) {
+            const bullet = { x, y, width: 4, height: 10, speed: isPlayer ? 7 : -5 };
+            if (isPlayer) bullets.push(bullet);
+            else enemyBullets.push(bullet);
+            beep(isPlayer ? 800 : 200);
+        }
+
+        // Update game
+        function update() {
+            if (!gameRunning) return;
+
+            // Player movement
+            if ((keys['arrowleft'] || keys['a']) && player.x > 0) player.x -= player.speed;
+            if ((keys['arrowright'] || keys['d']) && player.x < canvas.width - player.width) player.x += player.speed;
+
+            // Shoot on space
+            if (keys[' ']) {
+                if (!keys.lastShot || Date.now() - keys.lastShot > 200) {
+                    shoot(player.x + player.width / 2, player.y, true);
+                    keys.lastShot = Date.now();
+                }
+            }
+
+            // Spawn enemies
+            if (Math.random() < 0.02 + wave * 0.005) createEnemy();
+
+            // Update bullets
+            bullets = bullets.filter(b => {
+                b.y -= b.speed;
+                return b.y > 0;
+            });
+            enemyBullets = enemyBullets.filter(b => {
+                b.y += Math.abs(b.speed);
+                return b.y < canvas.height;
+            });
+
+            // Update enemies
+            enemies.forEach((e, i) => {
+                e.y += e.speed;
+                e.shootTimer--;
+                if (e.shootTimer <= 0) {
+                    shoot(e.x + e.width / 2, e.y + e.height, false);
+                    e.shootTimer = Math.random() * 2000 + 1000;
+                }
+                if (e.y > canvas.height) {
+                    enemies.splice(i, 1);
+                    gameRunning = false;
+                    alert('Void breached! Game Over. Final Score: ' + score);
+                }
+            });
+
+            // Collisions: bullets vs enemies
+            bullets.forEach((b, bi) => {
+                enemies.forEach((e, ei) => {
+                    if (b.x < e.x + e.width && b.x + b.width > e.x && b.y < e.y + e.height && b.y + b.height > e.y) {
+                        enemies.splice(ei, 1);
+                        bullets.splice(bi, 1);
+                        score += 10;
+                        if (score % 10 === 0) wave++;
+                        beep(600, 50);
+                    }
+                });
+            });
+
+            // Collisions: enemy bullets vs player
+            enemyBullets.forEach((b, bi) => {
+                if (b.x < player.x + player.width && b.x + b.width > player.x && b.y < player.y + player.height && b.y + b.height > player.y) {
+                    enemyBullets.splice(bi, 1);
+                    gameRunning = false;
+                    alert('Hit! Game Over. Final Score: ' + score);
+                }
+            });
+
+            // Passive mining
+            if (mining) {
+                score += 0.1;
+            }
+
+            // Update UI
+            scoreEl.textContent = Math.floor(score);
+            wayScoreEl.textContent = Math.floor(score / 100);
+            coinScoreEl.textContent = Math.floor(score / 200);
+            tr3bScoreEl.textContent = Math.floor(score / 500);
+            waveEl.textContent = wave;
+
+            // Fake price fluctuations
+            document.getElementById('way4out').textContent = '$' + (0.001 + Math.random() * 0.001).toFixed(4);
+            document.getElementById('coin4').textContent = '$' + (0.004 + Math.random() * 0.002).toFixed(4);
+            document.getElementById('tr3b').textContent = '$' + (0.0008 + Math.random() * 0.0002).toFixed(4);
+
+            requestAnimationFrame(update);
+        }
+
+        // Draw everything
+        function draw() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+            // Draw player (triangle ship)
+            ctx.fillStyle = '#00ff00';
+            ctx.beginPath();
+            ctx.moveTo(player.x + player.width / 2, player.y);
+            ctx.lineTo(player.x, player.y + player.height);
+            ctx.lineTo(player.x + player.width, player.y + player.height);
+            ctx.closePath();
+            ctx.fill();
+
+            // Draw bullets
+            ctx.fillStyle = '#ffff00';
+            bullets.forEach(b => ctx.fillRect(b.x, b.y, b.width, b.height));
+            ctx.fillStyle = '#ff0000';
+            enemyBullets.forEach(b => ctx.fillRect(b.x, b.y, b.width, b.height));
+
+            // Draw enemies (squares with eyes)
+            ctx.fillStyle = '#ff00ff';
+            enemies.forEach(e => {
+                ctx.fillRect(e.x, e.y, e.width, e.height);
+                ctx.fillStyle = '#00ff00';
+                ctx.fillRect(e.x + 5, e.y + 5, 5, 5); // eye 1
+                ctx.fillRect(e.x + 30, e.y + 5, 5, 5); // eye 2
+                ctx.fillStyle = '#ff00ff';
+            });
+        }
+
+        // Event listeners
+        document.getElementById('mineBtn').addEventListener('click', () => {
+            mining = !mining;
+            document.getElementById('mineBtn').textContent = mining ? 'Stop Mining' : 'Mine Shards (AFK Grind)';
+            beep(400);
+        });
+
+        document.getElementById('redeemBtn').addEventListener('click', () => {
+            const totalShards = score;
+            document.getElementById('redeemInfo').innerHTML = `
+                <p>Shards to redeem: ${Math.floor(totalShards)}</p>
+                <p>$WAY4OUT: ${Math.floor(totalShards / 100)} (x${totalShards / 100})</p>
+                <p>$COIN4: ${Math.floor(totalShards / 200)} (x${totalShards / 200})</p>
+                <p>$TR3B: ${Math.floor(totalShards / 500)} (x${totalShards / 500})</p>
+            `;
+            console.log(`Redeeming ${totalShards} shards on Base: WAY4OUT=${Math.floor(totalShards / 100)}, COIN4=${Math.floor(totalShards / 200)}, TR3B=${Math.floor(totalShards / 500)}`);
+            showModal();
+        });
+
+        function showModal() {
+            document.getElementById('overlay').style.display = 'block';
+            document.getElementById('modal').style.display = 'block';
+        }
+
+        function closeModal() {
+            document.getElementById('overlay').style.display = 'none';
+            document.getElementById('modal').style.display = 'none';
+        }
+
+        // Start game
+        update();
+        draw();
+        setInterval(draw, 16); // ~60fps
+    </script>
 </body>
 </html>
